--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,14 @@
+@font-face {
+  font-family: RowdiesRegular;
+  src: url('font/Rowdies-Regular.ttf');
+}
+
 * {
 	box-sizing: border-box;
 }
 
 html, body {
+	font-family: RowdiesRegular, Arial, Helvetica, sans-serif;
 	width: 100%;
 	height: 100%;
 	padding: 0;
@@ -14,15 +20,25 @@ html, body {
 	flex-wrap: wrap;
 }
 
+#score-container {
+	height: 40px;
+    padding: 10px;
+    background: black;
+    color: #9ee69e;
+    text-transform: uppercase;
+}
+
+
+}
+
 #score {
-	padding: 10px;
-    font-family: arial;
+	
 }
 
 .tile {
-	border: 1px solid black;
+	border: 0;
 	background-repeat: no-repeat;
-	background-size: contain;
+	background-size: cover;
 }
 
 .castle {
